# helpdeskgram-bot

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  example.env  pyproject.toml  requirements.txt  settings.py  setup.cfg
app/: db.py  main.py  utils.py
app/api/: jira_rest_api.py  jira_route_handler.py
app/handlers/: commands.py  create_issue.py  list_issue.py  start.py
app/keyboards/: default.py
locales/: messages.pot
locales/en/LC_MESSAGES/: messages.mo  messages.po
locales/ru/LC_MESSAGES/: messages.mo  messages.po
